# memetica

./: .gitignore  README.md  db_helper.py  main.py  md_embedder.py  md_helper.py  meme_schema.py
backend/: .env  .gitignore  auth.py  db_helper.py  main.py  md_embedder.py  md_helper.py  meme_schema.py  pyproject.toml
backend/MoondreamTorch/: config.py  hf_moondream.py  hf_release.py  image_crops.py  layers.py  moondream.py  region.py  rope.py  sample.py  text.py  utils.py  vision.py  weights.py
db/memetica-db/memes.lance/_transactions/: 0-21cb7ab4-7aef-4f91-8b61-8ca220a18db0.txn  0-6705c46c-ccc2-4be0-9957-98fa5a36d0b1.txn  0-83b3fa73-0bcd-427b-b837-2ba8ea760119.txn
db/memetica-db/memes.lance/_versions/: 1.manifest
frontend/: index.tsx  package.json  tsconfig.json
frontend/public/: index-zhf5jw04.js  index.html
frontend/src/: App.tsx  app.jsx  main.jsx
frontend/src/routes/: login.jsx  notfound.jsx  search.jsx
